<?xml version="1.0"?>
<package format="2">
  <name>auxiliary</name>
  <version>0.0.0</version>
  <description>Sub-Package containing fastfustion from TUM</description>
  <maintainer email="karrerm@student.ethz.ch">Marco Karrer</maintainer>
  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cmake_modules</depend>
</package>
