<?xml version="1.0"?>
<package format="2">
  <name>fastfusion_node</name>
  <version>0.0.0</version>
  <description>Main node containing fastfustion from TUM</description>
  <maintainer email="karrerm@student.ethz.ch">Marco Karrer</maintainer>
  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>auxiliary</depend>
  <depend>camerautils</depend>
  <depend>cv_bridge</depend>
  <depend>fusion</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>  
  <depend>tclap</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
</package>
